chore: mixing node modules & deno imports

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,8 @@
     ":\\s*?[\"'`]([^\"'`]*).*?,"
   ],
   "cSpell.words": [
+    "autoname",
+    "cssnano",
     "solidjs",
     "tailwindcss",
     "wouter"
